# dashcam-perception

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: bounded_queue_test.cpp  live_pipeline.cpp  live_viewer.cpp  offline_replay.cpp
configs/: car.yaml  dev.yaml  webcam.yaml
include/apps/: ansi_dashboard.hpp  hud_overlay.hpp
include/core/: config.hpp  config_loader.hpp  detections.hpp  frame.hpp  preprocessed_frame.hpp  render_frame.hpp  track.hpp  world_state.hpp  yolo_dnn.hpp
include/core/labels/: car_labels.hpp  general_labels.hpp
include/infra/: bounded_queue.hpp  latest_store.hpp  metrics.hpp  stop_token.hpp  thread_runner.hpp
include/stages/: camera_stage.hpp  inference_stage.hpp  preprocess_stage.hpp  stage.hpp  tracking_stage.hpp  visualization_stage.hpp
src/apps/: ansi_dashboard.cpp  hud_overlay.cpp
src/core/: config_loader.cpp  yolo_dnn.cpp
src/infra/: thread_runner.cpp
src/stages/: camera_stage.cpp  inference_stage.cpp  preprocess_stage.cpp  stage.cpp  tracking_stage.cpp  visualization_stage.cpp
tests/: latest_store_test.cpp  thread_runner_test.cpp
